removed div within <ul> and fixed align bug

--- a/style.css
+++ b/style.css
@@ -674,12 +674,13 @@ footer{
   display: flex;
   justify-content: space-between; 
   flex-direction: column; 
-  align-items: flex-start; 
-  margin-right: 50px;
+  align-items: flex-end;
 }
 
 .social li{
-  margin: 7.8px 0;   
+  margin: 7.8px 0;
+  text-align: left;
+  width: 110px;
 }
 
 
